# soes_ws

./: .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: ros2-ci.yml
choux_bringup/: package.xml  setup.py
choux_control/: package.xml  setup.cfg  setup.py
src/choux_bringup/: package.xml  setup.cfg  setup.py
src/choux_bringup/config/: extruder.yaml
src/choux_bringup/launch/: choux_bringup.launch.py
src/choux_bringup/resource/: choux_bringup
src/choux_control/: package.xml  setup.py
src/choux_control/choux_control/: __init__.py  extruder_node.py  stepper_node.py
src/choux_control/launch/: stepper_launch.py
src/choux_control/resource/: choux_control
src/soes_bringup/: setup.cfg  setup.py
src/soes_bringup/config/: comm.yaml  robothand.yaml  state.yaml  vision.yaml
src/soes_bringup/launch/: bringup.launch.py
src/soes_bringup/resource/: soes_bringup
src/soes_msgs/: CMakeLists.txt
src/soes_msgs/msg/: BoolStamped.msg  CupcakeCenters.msg  JointFeedback.msg  JointTargets.msg  PumpCmd.msg  RollerCmd.msg  SpiralParams.msg  VisionQuality.msg
src/soes_msgs/srv/: Home.srv  PumpPrime.srv  RollTray.srv  SetSpiralParams.srv  StartStop.srv
src/soes_robothand/: setup.cfg  setup.py
src/soes_robothand/config/: robot.yaml
src/soes_robothand/resource/: soes_robothand
src/soes_robothand/soes_robothand/: node.py
src/soes_state/: setup.cfg  setup.py
src/soes_state/config/: params.yaml
src/soes_state/resource/: soes_state
src/soes_state/soes_state/: graph.py  node.py  one_motor_cmd.py  soes_comm_i2c.py  utils.py
src/soes_vision/: setup.cfg  setup.py
src/soes_vision/config/: params.yaml
src/soes_vision/resource/: soes_vision
src/soes_vision/soes_vision/: node.py
temp_mirror.git/: config  packed-refs
temp_mirror.git/temp_mirror.git/: config
