<?xml version="1.0"?>
<package format="3">
  <name>choux_bringup</name>
  <version>0.1.0</version>
  <description>Launch & config for ChouxBot</description>
  <maintainer email="you@example.com">Kenrich Heavenly Sandria</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>choux_control</exec_depend>

  <export/>
</package>
