<?xml version="1.0"?>
<package format="3">
  <name>choux_control</name>
  <version>0.1.0</version>
  <description>Extruder control for choux paste using stepper motor</description>
  <maintainer email="you@example.com">Kenrich Heavenly Sandria</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pyserial</exec_depend>

  <export/>
</package>
